BuildDataPathsImpl - pass NIO Path directly
GitOrigin-RevId: a17728fa5ad4d1ec815e966151da69d4e8d94d26